jenkins/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: forwardedProto
spec:
  headers:
    sslProxyHeaders:
      X-Forwarded-Proto: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-websecre
  namespace: jenkins
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`jenkins.sz.yadadev.com`)
    middlewares:
    - name: forwardedProto
    services:
    - name: jenkins
      port: 80
  tls:
    certResolver: le
    domains:
    - main: yadadev.com
      sans:
      - '*.sz.yadadev.com'
